--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ h2{
 #another-card img{
     width:180px;
     height: 130px;
-    image-orientation: flip;
     padding-left: 80px;
 }
 .card-title{
@@ -127,4 +126,22 @@ footer{
 }
 .card:hover{
     background-color: rgb(238, 235, 228);
+}
+
+@media (max-width:1000px){
+    #another-card{
+        margin-top: 700px;
+        border: none;
+        width: 105px;
+        height: 320px;
+        text-align: center;
+        box-shadow: none;
+        background-color: rgb(253, 251, 247);
+        float: left;       
+    }
+    #another-card img{
+        width:90px;
+        height: 100px;
+        padding-left: 25px;
+}
 }
